--- a/dice/src/App.css
+++ b/dice/src/App.css
@@ -1,38 +1,50 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p{
+  color: rgb(70, 70, 235);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main{
+  /* border: 2px solid black; */
+  margin-top:15vh;
+
+
+}
+.lower-div{
+  /* background-color: rgb(237, 189, 126); */
+justify-content: center;
+align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+
+
+
+
+.search{
+  background-color: white;
+  height: 5vh;
+
+  width:100vh;
+}
+.middle-div{
+  border: 2px solid red;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 80vh;
+  gap: 20%;
+  margin-left: 10%;
+}
+ 
+.search-div{
+margin-left: 20%;
+width: 80%;
+background-color: white;
+border: 2px solid white;
+}
+.sor-div{
+  margin-left:28%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* style={{ position: 'relative', marginLeft:'30%', background:'white', border:'2px solid red'}} */
