--- a/dice/src/App.css
+++ b/dice/src/App.css
@@ -1,14 +1,12 @@
 .App {
   text-align: center;
 }
-p{
-  color: rgb(70, 70, 235);
-}
+
 
 .main{
   /* border: 2px solid black; */
-  margin-top:15vh;
-
+  background-color: lightblue;
+/* border: 2px solid red; */
 
 }
 .lower-div{
@@ -17,7 +15,9 @@ justify-content: center;
 align-items: center;
 }
 
-
+.appbar{
+  margin-bottom: 2%;
+}
 
 
 
@@ -30,7 +30,7 @@ align-items: center;
   width:100vh;
 }
 .middle-div{
-  border: 2px solid red;
+  /* border: 2px solid red; */
   display: flex;
   width: 80vh;
   gap: 20%;
@@ -39,12 +39,19 @@ align-items: center;
  
 .search-div{
 margin-left: 20%;
-width: 80%;
+width: 100%;
+
 background-color: white;
-border: 2px solid white;
+/* border: 2px solid red; */
 }
-.sor-div{
-  margin-left:28%;
+.sort-div{
+  margin-left:35%;
+flex-shrink: 0;
+background-color: white;
+}
+strong{
+  font-size: larger;
 }
 
+/* style={{ flexShrink: 0, marginLeft: '35%' , background:'white'}} */
 /* style={{ position: 'relative', marginLeft:'30%', background:'white', border:'2px solid red'}} */
