--- a/dice/src/App.css
+++ b/dice/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  
 }
 
 
@@ -45,8 +46,10 @@ background-color: white;
 /* border: 2px solid red; */
 }
 .sort-div{
-  margin-left:35%;
-flex-shrink: 0;
+  margin-left:30%;
+  height: 6vh;
+  border-radius: 2%;
+/* flex-shrink: 0; */
 background-color: white;
 }
 strong{
