--- a/dice/src/App.css
+++ b/dice/src/App.css
@@ -30,30 +30,38 @@ align-items: center;
 
   width:100vh;
 }
-.middle-div{
-  /* border: 2px solid red; */
+/* .middle-div{
+  border: 2px solid red;
   display: flex;
   width: 80vh;
   gap: 20%;
   margin-left: 10%;
 }
- 
+  */
 .search-div{
-margin-left: 20%;
-width: 100%;
+margin-left:10%;
+width: 40%;
+position: relative;
 
 background-color: white;
 /* border: 2px solid red; */
 }
 .sort-div{
-  margin-left:30%;
-  height: 6vh;
+  /* margin-left:30%; */
+  width: 20vh;
+  height: 4vh;
   border-radius: 2%;
+  /* border: 2px solid red; */
 /* flex-shrink: 0; */
 background-color: white;
 }
 strong{
   font-size: larger;
+}
+.select{
+  height: 4vh;
+  width: 20vh;
+  
 }
 
 /* style={{ flexShrink: 0, marginLeft: '35%' , background:'white'}} */
